gcc/gcc/testsuite/algol60.dg/fail/array2.a60
'comment' { dg-do compile } ;
'begin'
 'integer' 'array' a[]; 'comment' { dg-error "syntax error" } ;
'end';
